@@ -2,6 +2,7 @@ Risk - Yura Mamyrin (yura@yura.net)
 
 TODO:
 
+    add a ranking for the registered players to maintain the competition flavour in the game.
     if switching quickly between views in the MapStore, a thumb for a Category is the same as one of the maps, so it tries to download both, and save both to cache at the same time, causing a "[yura.net Cache] already has file" error
     in online play when the defender is not online, it should roll there dice anyway if they have auto-defend
     show continents army values in help window
